# evObj

./: CMakeLists.txt  LICENSE
include/EmexFoundation/: EFArray.h  EFData.h  EFNumber.h  EFPage.h  EFPageGroup.h  EFString.h  EmexFoundation.h
include/EmexFoundation/runtime/: EFAllocator.h  EFBase.h
include/evObj/: EVArray.h  EVNumber.h  EVString.c  EVString.h  alloc.h  defs.h  evObj.h  event.h  heap.h  lock.h  reference.h
include/evObj/runtime/: EVAllocator.h  EVBase.h  defs.h  reference.h
src/: EFArray.c  EFData.c  EFNumber.c  EFPage.c  EFPageGroup.c  EFString.c  EVArray.c  EVNumber.c  EVPageGroup.c  EVString.c  alloc.c  base.c  event.c  heap.c  reference.c
src/runtime/: EFAllocator.c  EFBase.c  EVAllocator.c  EVBase.c  alloc.c  reference.c
